# pal_fsp_gui

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml
include/pal_fsp_gui/: fsp_panel.h  pal_fsp_gui.h
resources/: pal_fsp_gui.ui
src/: fsp_panel.cpp  pal_fsp_gui.cpp
