<?xml version="1.0"?>
<package format="2">
  <name>pal_fsp_gui</name>
  <version>0.0.0</version>
  <description>The pal_fsp_gui package</description>

  <maintainer email="adria.roig@pal-robotics.com">AdriaRoig</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>pal_footstep_planner_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>pal_ros_utils</depend>
  <build_depend>class_loader</build_depend>


  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
